# incbin

./: IncBinMacro.cmake  README.md  incbin.c  incbin.cpp  incbin.h
test/: .gitignore  Makefile  asserts.c  loremipsum.txt  sevenbytes.txt
test/CMakeExample/: 1.incbin.txt  2.incbin.txt  CMakeLists.txt  example.cpp
test/CMakeExample/folder/: 1.incbin.txt  2.incbin.txt
test/CMakeExample/folder/2/: 1.incbin.txt  2.incbin.txt
